[package]
name = "roguelike-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.7"
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
hecs = "0.9.0"
rand = "0.8.5"
rand_seeder = "0.2.3"

